--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "dev": "NODE_ENV=dev nodemon",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
+    "start": "NODE_ENV=dev ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "NODE_ENV=dev tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
     "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
     "start:prod": "node dist/main.js",
@@ -38,7 +38,7 @@
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
-    "swagger-ui-express": "^4.0.7",
+    "swagger-ui-express": "^4.1.1",
     "typeorm": "^0.2.18"
   },
   "devDependencies": {
